# flowmark

./: .gitignore  CLAUDE.md  features.json
.github/workflows/: deploy.yml
backend/: Cargo.toml  package.json  pnpm-lock.yaml
backend/migrations/: 20260406_000001_initial.sql
backend/src/: auth.rs  config.rs  db.rs  db.ts  errors.rs  import-kb.ts  import-projects.ts  main.rs  mcp-server.ts  mcp.ts  routes.ts  server.ts
backend/src/__tests__/: api.test.ts  setup.ts
backend/src/models/: board.rs  column.rs  mod.rs  project.rs  quick_note.rs  task.rs
backend/src/routes/: auth.rs  boards.rs  columns.rs  dashboard.rs  github.rs  mod.rs  projects.rs  quick_notes.rs  tasks.rs
backend/src/services/: github_service.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: sidebar-store.test.ts
frontend/src/api/: auth.ts  boards.ts  client.ts  dashboard.ts  github.ts  notes.ts  projects.ts  tasks.ts
frontend/src/components/: Drawer.tsx  GitHubPanel.tsx  KanbanBoard.tsx  Layout.tsx  MilkdownEditor.tsx  MobileNav.tsx  ProjectFiles.tsx  Sidebar.tsx  TaskCard.tsx  TaskDetailDrawer.tsx  TaskDetailPanel.tsx
frontend/src/hooks/: useAuth.ts  useIsMobile.ts  useNotes.ts  useProjects.ts  useTasks.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  DocDetailPage.tsx  DocsPage.tsx  LoginPage.tsx  NotesPage.tsx  ProjectDetailPage.tsx  ProjectListPage.tsx
scripts/: deploy.sh  flowmark.service
(+2 files in other folders)
