[package]
name = "flowmark"
version = "0.1.0"
edition = "2024"
description = "Personal workflow management system"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
